Fix selection div: -Fix image overflowing outside of container div.

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -14,7 +14,11 @@ body{
 }
 
 .choice{
-	display: inline;
+	width: 10%;
+	margin-left: 1.5%;
+	margin-right: 1.5%;
+	display: inline-block;
+	border: 1px solid red;
 }
 
 .choice:hover{
@@ -23,7 +27,4 @@ body{
 
 .choice-img{
 	max-width: 100%;
-	width: 10%;
-	margin-left: 1.5%;
-	margin-right: 1.5%;
 }
